syntax = "proto3";

package ru.otus.service;

option java_multiple_files = true;

message NumberRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message NumberResponse {
  int64 number = 1;
}

service NumberService  {
  rpc runSequence(NumberRequest) returns (stream NumberResponse) {};
}